# NEAT

./: .gitignore  LICENSE  README.md  pyproject.toml  run.sh  trajectory.ipynb  visualize_generated_mols.ipynb
prefixes/: prefixes.sdf
scripts/: config.yaml  config_bond_predictor.yaml  config_evaluate.yaml  config_evaluation.yaml  config_generate.yaml  config_generation.yaml  config_training.yaml  evaluation.py  generate.py  generation.py  generation_prefix.py  geom_vocab.yaml  get_weights.py  prefixes_from_geom.py  process_prefix.py  qm9_small_vocab.yaml  qm9_vocab.yaml  training.py  training_bond_predictor.py
src/molgen/: __init__.py
src/molgen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/molgen/dataset/: augmentation.py  datamodule.py  dataset.py  splitting.py
src/molgen/model/: __init__.py  attention.py  augmentation.py  callbacks.py  decoder.py  model.py  modules.py  molecule_builder.py  molgen.py  positional_encoding.py  simple_mlp.py  splitting.py  utils.py
src/molgen/utils/: edm_metrics.py
src/neat/: __init__.py
src/neat/dataset/: __init__.py  augmentation.py  bond_dataset.py  datamodule.py  dataset.py  dataset_geom.py  dataset_qm9.py  splitting.py
src/neat/model/: __init__.py  attention.py  bond_predictor.py  callbacks.py  molecule_builder.py  neat.py  positional_encoding.py  simple_mlp.py  utils.py
src/neat/utils/: __init__.py  edm_metrics.py
