[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molgen"
version = "2025.10.216"
description = "Autoregressive generation of molecules"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT License"}
authors = [
    {name = "Daniel Rose", email = "daniel.rose@univie.ac.at"},
]

dependencies = [
    "torch==2.9.0",
    "torch_geometric==2.7.0",
    "lightning",
    "tensorboard",
    "matplotlib",
    "scikit-learn",
    "pandas",
    "jupyter",
    "ipykernel",
    "py3dmol",
    "ipywidgets",
    "rdkit",
]

[tool.setuptools]
packages = { find = { where = ["src"] } }