[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neat"
version = "2025.10.216"
description = "Autoregressive generation of molecules"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT License"}
authors = [
    {name = "Daniel Rose", email = "daniel.rose@univie.ac.at"},
]

dependencies = [
    "torch",
    "torch_geometric",
    "lightning",
    "tensorboard",
    "matplotlib",
    "scikit-learn",
    "pandas",
    "jupyter",
    "ipykernel",
    "py3dmol",
    "ipywidgets",
    "rdkit",
]

[tool.setuptools]
packages = { find = { where = ["src"] } }