[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neat"
version = "1.1.0"
description = "Neighborhood-Guided, Efficient, Autoregressive Set Transformer for 3D Molecular Generation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT License"}
authors = [
    {name = "Daniel Rose", email = "daniel.rose@univie.ac.at"},
    {name = "Roxane Axel Jacob", email = "roxane.axel.jacob@univie.ac.at"},
]

dependencies = [
    "lightning==2.5.5",
    "networkx==3.5",
    "numpy==2.3.4",
    "pyYAML==6.0.3",
    "py3dmol==2.5.3",
    "rdkit==2025.9.1",
    "scipy==1.16.2",
    "torch_geometric",  # version managed by torch
    "tqdm==4.67.1",
]

[project.optional-dependencies]
vis = [
    "ipykernel==7.0.1",
    "ipython==9.6.0",
    "ipywidgets==8.1.7",
    "matplotlib==3.10.7",
    "pillow==12.0.0",
    "seaborn==0.13.2",
    "tensorboard===2.20.0",
]

[tool.setuptools]
packages = { find = { where = ["src"] } }